Fix misalignment of arrows when coords are outside
The issue was caused by the SVG layer fitting to the dimensions of the
outer wrapper, not the board. When `coords` is set to `outside`, the
board is smaller than the outer wrapper.

Fixes this by adding an inner "board wrapper" that contains the board
and arrows.

--- a/src/style.css
+++ b/src/style.css
@@ -157,13 +157,18 @@ table.dragging {
   cursor: grab;
 }
 
+/***********
+ * Wrappes *
+ ***********/
+
+.wrapper,
+.board-arrows-wrapper {
+  position: relative;
+}
+
 /***************
  * Coordinates *
  ***************/
-
-.wrapper {
-  position: relative;
-}
 
 .coords {
   display: none;
